implemented Game websocket
