# src/main/java/com/mythostrike/controller/message/game/SelectCardRequest.java
@@ -1,4 +1,0 @@
-package com.mythostrike.controller.message.game;
-
-public record SelectCardRequest(int lobbyId, int cardId) {
-}
