# src/main/java/com/mythostrike/controller/message/game/SelectCardsRequest.java
@@ -2,5 +2,5 @@ package com.mythostrike.controller.message.game;
 
 import java.util.List;
 
-public record DiscardCardRequest(int lobbyId, List<Integer> cardIdList) {
+public record SelectCardsRequest(int lobbyId, List<Integer> cardIdList) {
 }
